Mejora especificidad codigo

--- a/html/login.html
+++ b/html/login.html
@@ -113,7 +113,7 @@
                         <input type="password" class="form__control form-control" id="password-1"
                             placeholder="Contraseña">
                     </div>
-                    <button type="submit" class="form__button-submit btn btn-outline-info" data-aos="fade-up"
+                    <button type="submit" class="form__button-submit btn btn-outline-success" data-aos="fade-up"
                         data-aos-delay="600" data-aos-duration="1000">Iniciar sesión</button>
                     <p class="form__text">¿No tienes cuenta?<a class="form__link" href="./register.html"> Registrate</a>
                     </p>
@@ -133,7 +133,7 @@
                 <h5 class="offcanvas-body__price">Subtotal</h5>
                 <h6 class="offcanvas-body__total">Total:</h6>
                 <h6 class="offcanvas-body__total-price">$ total:</h6>
-                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-info">
+                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-success">
                     Comprar
                 </button>
             </div>
@@ -157,7 +157,7 @@
                     <form class="form" action="#">
                         <input class="form__email form-control" type="email" name="email" id="email"
                             placeholder="Ingresa tu email" />
-                        <button class="form__button form__button--btn-news btn btn-outline-info">Enviar</button>
+                        <button class="form__button form__button--btn-news btn btn-outline-success">Enviar</button>
                     </form>
                 </div>
                 <div class="socials" data-aos="zoom-in">
