--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class="card-body">
                         <h5 class="card-title">COD Modern Warfare</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product2">
@@ -187,7 +187,7 @@
                     <div class="card-body">
                         <h5 class="card-title">BioShock Infinite</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product3">
@@ -195,7 +195,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Borderlands 2</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product4">
@@ -203,7 +203,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Destiny 2</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product5">
@@ -211,7 +211,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Grand Theft Auto V</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product6">
@@ -219,7 +219,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Hitman 3</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product7">
@@ -227,7 +227,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Fallout 4</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product8">
@@ -235,7 +235,7 @@
                     <div class="card-body">
                         <h5 class="card-title">The Witcher 3 Wild Hunt</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -273,7 +273,7 @@
                     <div class="card-body">
                         <h5 class="card-title">BioShock</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product2 position-relative">
@@ -284,7 +284,7 @@
                     <div class="card-body">
                         <h5 class="card-title">DOOM (2016)</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product3 position-relative">
@@ -295,7 +295,7 @@
                     <div class="card-body">
                         <h5 class="card-title">The Witcher 3 Wild Hunt</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product4 position-relative">
@@ -306,7 +306,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Half Life 2</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product5 position-relative">
@@ -317,7 +317,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Hitman 3</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product6 position-relative">
@@ -328,7 +328,7 @@
                     <div class="card-body">
                         <h5 class="card-title">PAYDAY 2</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product7 position-relative">
@@ -339,7 +339,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Counter Strike Global</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="product-card card product8 position-relative">
@@ -350,7 +350,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Grand Theft Auto V</h5>
                         <p class="card-text">$5000</p>
-                        <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                        <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -368,7 +368,7 @@
                 <h5 class="offcanvas-body__price">Subtotal</h5>
                 <h6 class="offcanvas-body__total">Total:</h6>
                 <h6 class="offcanvas-body__total-price">$ total:</h6>
-                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-info">
+                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-success">
                     Comprar
                 </button>
             </div>
@@ -392,7 +392,7 @@
                     <form class="form" action="#">
                         <input class="form__email form-control" type="email" name="email" id="email"
                             placeholder="Ingresa tu email" />
-                        <button class="form__button form__button--btn-news btn btn-outline-info">Enviar</button>
+                        <button class="form__button form__button--btn-news btn btn-outline-success">Enviar</button>
                     </form>
                 </div>
                 <div class="socials" data-aos="zoom-in">
