--- a/html/contact.html
+++ b/html/contact.html
@@ -120,7 +120,7 @@
                         <textarea class="form__text-area form__control form-control" id="message" placeholder="Mensaje (opcional)"
                             rows="10"></textarea>
                     </div>
-                    <button type="button" class="form__button-submit btn btn-outline-info" data-aos="fade-up" data-aos-delay="1000"
+                    <button type="button" class="form__button-submit btn btn-outline-success" data-aos="fade-up" data-aos-delay="1000"
                         data-aos-duration="1000">Enviar</button>
                 </form>
             </div>
@@ -194,7 +194,7 @@
                 <h5 class="offcanvas-body__price">Subtotal</h5>
                 <h6 class="offcanvas-body__total">Total:</h6>
                 <h6 class="offcanvas-body__total-price">$ total:</h6>
-                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-info">
+                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-success">
                     Comprar
                 </button>
             </div>
@@ -218,7 +218,7 @@
                     <form class="form" action="#">
                         <input class="form__email form-control" type="email" name="email" id="email"
                             placeholder="Ingresa tu email" />
-                        <button class="form__button form__button--btn-news btn btn-outline-info">Enviar</button>
+                        <button class="form__button form__button--btn-news btn btn-outline-success">Enviar</button>
                     </form>
                 </div>
                 <div class="socials" data-aos="zoom-in">
