--- a/html/products.html
+++ b/html/products.html
@@ -123,7 +123,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Tomb Raider (2013)</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product2">
@@ -131,7 +131,7 @@
                 <div class="card-body">
                     <h5 class="card-title">The Witcher 3-Wild Hunt</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product3">
@@ -139,7 +139,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Red Dead Redemption 2</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product4">
@@ -147,7 +147,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Portal</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product5">
@@ -155,7 +155,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Portal 2</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product6">
@@ -163,7 +163,7 @@
                 <div class="card-body">
                     <h5 class="card-title">PAYDAY 2</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product7">
@@ -171,7 +171,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Limbo</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product8">
@@ -179,7 +179,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Life is Strange</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product9">
@@ -187,7 +187,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Left 4 Dead 2</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product10">
@@ -195,7 +195,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Hitman 3</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product11">
@@ -203,7 +203,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Grand Theft Auto V</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product12">
@@ -211,7 +211,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Forza Horizon 5</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product13">
@@ -219,7 +219,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Fallout 4</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product14">
@@ -227,7 +227,7 @@
                 <div class="card-body">
                     <h5 class="card-title">DOOM (2016)</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product15">
@@ -235,7 +235,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Destiny 2</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product16">
@@ -243,7 +243,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Counter Strike Global</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product17">
@@ -251,7 +251,7 @@
                 <div class="card-body">
                     <h5 class="card-title">COD Modern Warfare</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product18">
@@ -259,7 +259,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Borderlands 2</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product19">
@@ -267,7 +267,7 @@
                 <div class="card-body">
                     <h5 class="card-title">BioShock</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
             <div class="product-card card product20">
@@ -275,7 +275,7 @@
                 <div class="card-body">
                     <h5 class="card-title">BioShock Infinite</h5>
                     <p class="card-text">$5000</p>
-                    <a href="#" class="btn btn-outline-info">Agregar al carrito</a>
+                    <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                 </div>
             </div>
         </section>
@@ -292,7 +292,7 @@
                 <h5 class="offcanvas-body__price">Subtotal</h5>
                 <h6 class="offcanvas-body__total">Total:</h6>
                 <h6 class="offcanvas-body__total-price">$ total:</h6>
-                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-info">
+                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-success">
                     Comprar
                 </button>
             </div>
@@ -316,7 +316,7 @@
                     <form class="form" action="#">
                         <input class="form__email form-control" type="email" name="email" id="email"
                             placeholder="Ingresa tu email" />
-                        <button class="form__button form__button--btn-news btn btn-outline-info">Enviar</button>
+                        <button class="form__button form__button--btn-news btn btn-outline-success">Enviar</button>
                     </form>
                 </div>
                 <div class="socials" data-aos="zoom-in">
