--- a/html/register.html
+++ b/html/register.html
@@ -125,7 +125,7 @@
                         <input type="password" class="form__control form-control" id="password-2"
                             placeholder="Confirmar contraseña" required />
                     </div>
-                    <button type="submit" class="form__button-submit btn btn-outline-info" data-aos="fade-up"
+                    <button type="submit" class="form__button-submit btn btn-outline-success" data-aos="fade-up"
                         data-aos-delay="1000" data-aos-duration="1000">
                         Registrarse
                     </button>
@@ -148,7 +148,7 @@
                 <h5 class="offcanvas-body__price">Subtotal</h5>
                 <h6 class="offcanvas-body__total">Total:</h6>
                 <h6 class="offcanvas-body__total-price">$ total:</h6>
-                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-info">
+                <button type="button" class="offcanvas-body__btn-buy btn btn-outline-success">
                     Comprar
                 </button>
             </div>
@@ -172,7 +172,7 @@
                     <form class="form" action="#">
                         <input class="form__email form-control" type="email" name="email" id="email"
                             placeholder="Ingresa tu email" />
-                        <button class="form__button form__button--btn-news btn btn-outline-info">Enviar</button>
+                        <button class="form__button form__button--btn-news btn btn-outline-success">Enviar</button>
                     </form>
                 </div>
                 <div class="socials" data-aos="zoom-in">
