Se optimiza código

--- a/html/login.html
+++ b/html/login.html
@@ -31,7 +31,7 @@
     <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO">
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
         <div class="logo">
