--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO" />
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
         <div class="logo">
@@ -240,7 +240,7 @@
                 </div>
             </div>
         </section>
-        <!-- Animacion faces -->
+        <!-- Animacion faces
         <section class="animation">
             <label class="face" data-aos="fade-right">
                 <input class="face__input-face" type="radio" name="pink" />
@@ -258,7 +258,7 @@
                 <input class="face__input-face"" type="radio" name="green" />
                 <div class="face__smile"></div>
             </label>
-        </section>
+        </section> -->
         <!-- Listado de productos en oferta: listado horizontal -->
         <section class="home__container">
             <div class="home__subtitle">
