--- a/html/contact.html
+++ b/html/contact.html
@@ -31,7 +31,7 @@
     <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO">
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
         <div class="logo">
@@ -99,33 +99,36 @@
             <div class="form__subtitle">
                 <h3 class="form__content-subtitle">Contactanos</h3>
             </div>
-            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in" data-aos-delay="200"
-                data-aos-duration="2000">
+            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in"
+                data-aos-delay="200" data-aos-duration="2000">
                 <h3 class="form__title">Completa el formulario de contacto</h3>
                 <form class="form__formu">
                     <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
                         <label for="name" class="form__label form-label">Nombre</label>
-                        <input type="text" class="form__control form-control" id="name" placeholder="Nombre de usuario" required>
+                        <input type="text" class="form__control form-control" id="name" placeholder="Nombre de usuario"
+                            required>
                     </div>
                     <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
                         <label for="e-mail" class="form__label form-label">E-mail</label>
-                        <input type="email" class="form__control form-control" id="e-mail" placeholder="E-mail" required>
+                        <input type="email" class="form__control form-control" id="e-mail" placeholder="E-mail"
+                            required>
                     </div>
                     <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
                         <label for="telephone" class="form__label form-label">Teléfono</label>
-                        <input type="tel" class="form__control form-control" id="telephone" placeholder="Telefono (opcional)">
+                        <input type="tel" class="form__control form-control" id="telephone"
+                            placeholder="Telefono (opcional)">
                     </div>
                     <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
                         <label for="message" class="form__label form-label">Mensaje</label>
-                        <textarea class="form__text-area form__control form-control" id="message" placeholder="Mensaje (opcional)"
-                            rows="10"></textarea>
+                        <textarea class="form__text-area form__control form-control" id="message"
+                            placeholder="Mensaje (opcional)" rows="10"></textarea>
                     </div>
-                    <button type="button" class="form__button-submit btn btn-outline-success" data-aos="fade-up" data-aos-delay="1000"
-                        data-aos-duration="1000">Enviar</button>
+                    <button type="button" class="form__button-submit btn btn-outline-success" data-aos="fade-up"
+                        data-aos-delay="1000" data-aos-duration="1000">Enviar</button>
                 </form>
             </div>
         </section>
-        <!-- Animacion faces -->
+        <!-- Animacion faces
         <section class="animation">
             <label class="face" data-aos="fade-right">
                 <input class="face__input-face" type="radio" name="pink" />
@@ -143,40 +146,42 @@
                 <input class="face__input-face" type="radio" name="pink" />
                 <div class="face__smile"></div>
             </label>
-        </section>
+        </section> -->
         <!-- Multimedia: video y mapa -->
-        <section class="multimedia__container">
-            <div class="multimedia__subtitle">
-                <h3 class="multimedia__content-subtitle">Video</h3>
+        <section class="video__container">
+            <div class="video__subtitle">
+                <h3 class="video__content-subtitle">Video</h3>
             </div>
-            <div class="multimedia__video embed-responsive embed-responsive-16by9">
-                <iframe class="multimedia__iframe embed-responsive-item" src="https://www.youtube.com/embed/oDKKu7hxT78"
+            <div class="video__content embed-responsive embed-responsive-16by9">
+                <iframe class="video__iframe embed-responsive-item" src="https://www.youtube.com/embed/oDKKu7hxT78"
                     allowfullscreen></iframe>
-                <!-- Animacion faces -->
-                <div class="animation">
-                    <label class="face" data-aos="fade-right">
-                        <input class="face__input-face" type="radio" name="pink" />
-                        <div class="face__smile"></div>
-                    </label>
-                    <label class="face" data-aos="fade-right">
-                        <input class="face__input-face" type="radio" name="pink" />
-                        <div class="face__smile"></div>
-                    </label>
-                    <label class="face" data-aos="fade-left">
-                        <input class="face__input-face" type="radio" name="pink" />
-                        <div class="face__smile"></div>
-                    </label>
-                    <label class="face" data-aos="fade-left">
-                        <input class="face__input-face" type="radio" name="pink" />
-                        <div class="face__smile"></div>
-                    </label>
-                </div>
             </div>
-            <div class="multimedia__subtitle">
-                <h3 class="multimedia__content-subtitle">Ubicación</h3>
+        </section>
+        <!-- Animacion faces
+        <section class="animation">
+            <label class="face" data-aos="fade-right">
+                <input class="face__input-face" type="radio" name="pink" />
+                <div class="face__smile"></div>
+            </label>
+            <label class="face" data-aos="fade-right">
+                <input class="face__input-face" type="radio" name="pink" />
+                <div class="face__smile"></div>
+            </label>
+            <label class="face" data-aos="fade-left">
+                <input class="face__input-face" type="radio" name="pink" />
+                <div class="face__smile"></div>
+            </label>
+            <label class="face" data-aos="fade-left">
+                <input class="face__input-face" type="radio" name="pink" />
+                <div class="face__smile"></div>
+            </label>
+        </section> -->
+        <section class="map__container">
+            <div class="map__subtitle">
+                <h3 class="map__content-subtitle">Ubicación</h3>
             </div>
-            <div class="multimedia__map embed-responsive embed-responsive-16by9">
-                <iframe class="multimedia__iframe embed-responsive-item"
+            <div class="map__content embed-responsive embed-responsive-16by9">
+                <iframe class="map__iframe embed-responsive-item"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.44366934056!2d-58.503337965168704!3d-34.61566245894793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1643766720197!5m2!1ses-419!2sar"
                     allowfullscreen></iframe>
             </div>
