--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Custom -->
     <link rel="stylesheet" href="./css/stylescss.css" />
-    <title>Nekzus Game Store - Home Page</title>
     <!-- META DESCRIPTION -->
     <meta name="description"
         content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos." />
     <!-- META KEYWORDS -->
     <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO" />
+    <title>Nekzus Game Store - Home Page</title>
 </head>
 
 <body class="body">
     <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
-        <div class="logo">
-            <a href="./index.html" class="logo__link"><img class="logo__site"
+        <div class="header__logo">
+            <a href="./index.html" class="header__link"><img class="header__logo-site"
                     src="./images/logo-nekzus-game-store-shadow.png" alt="logo" /></a>
         </div>
-        <div class="title">
-            <a href="./index.html" class="title__link">
+        <div class="header__title">
+            <a href="./index.html" class="header__link">
                 <div class="animate__animated animate__rubberBand">
-                    <h1 class="title__site">
-                        Nekzus<span class="title__subtitle-site">Game Store</span>
+                    <h1 class="header__title-site">
+                        Nekzus<span class="header__subtitle-site">Game Store</span>
                     </h1>
                 </div>
             </a>
@@ -174,7 +174,7 @@
                 <h3 class="home__content-subtitle">Productos destacados</h3>
             </div>
             <div class="home__products">
-                <div class="product-card card product1">
+                <div class="card">
                     <img src="./images/pda_COD-Modern-Warfare.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">COD Modern Warfare</h5>
@@ -182,7 +182,7 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product2">
+                <div class="card">
                     <img src="./images/pda_BioShock-Infinite.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">BioShock Infinite</h5>
@@ -190,7 +190,7 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product3">
+                <div class="card">
                     <img src="./images/pda_Borderlands-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Borderlands 2</h5>
@@ -198,7 +198,7 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product4">
+                <div class=" card product4">
                     <img src="./images/pda_Destiny-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Destiny 2</h5>
@@ -206,7 +206,7 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product5">
+                <div class="card">
                     <img src="./images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Grand Theft Auto V</h5>
@@ -214,7 +214,7 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product6">
+                <div class="card">
                     <img src="./images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Hitman 3</h5>
@@ -222,7 +222,7 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product7">
+                <div class="card">
                     <img src="./images/pda_Fallout-4.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">Fallout 4</h5>
@@ -230,7 +230,7 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product8">
+                <div class="card">
                     <img src="./images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
                         <h5 class="card-title">The Witcher 3 Wild Hunt</h5>
@@ -240,34 +240,15 @@
                 </div>
             </div>
         </section>
-        <!-- Animacion faces
-        <section class="animation">
-            <label class="face" data-aos="fade-right">
-                <input class="face__input-face" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-            <label class="face" data-aos="fade-right">
-                <input class="face__input-face"" type="radio" name="green" />
-                <div class="face__smile"></div>
-            </label>
-            <label class="face" data-aos="fade-left">
-                <input class="face__input-face"" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-            <label class="face" data-aos="fade-left">
-                <input class="face__input-face"" type="radio" name="green" />
-                <div class="face__smile"></div>
-            </label>
-        </section> -->
         <!-- Listado de productos en oferta: listado horizontal -->
         <section class="home__container">
             <div class="home__subtitle">
                 <h3 class="home__content-subtitle">Ofertas disponibles</h3>
             </div>
             <div class="home__products">
-                <div class="product-card card product1 position-relative">
+                <div class="card position-relative">
                     <span
-                        class="product-card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">25%
+                        class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">25%
                         <span class="visually-hidden"></span></span>
                     <img src="./images/pda_BioShock.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -276,9 +257,9 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product2 position-relative">
+                <div class="card position-relative">
                     <span
-                        class="product-card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">15%
+                        class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">15%
                         <span class="visually-hidden"></span></span>
                     <img src="./images/pda_DOOM-(2016).webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -287,9 +268,9 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product3 position-relative">
+                <div class="card position-relative">
                     <span
-                        class="product-card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">40%
+                        class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">40%
                         <span class="visually-hidden"></span></span>
                     <img src="./images/pda_The-Witcher-3-Wild-Hunt.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -298,9 +279,9 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product4 position-relative">
+                <div class="card position-relative">
                     <span
-                        class="product-card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">10%
+                        class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">10%
                         <span class="visually-hidden"></span></span>
                     <img src="./images/pda_Half-Life-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -309,9 +290,9 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product5 position-relative">
+                <div class="card position-relative">
                     <span
-                        class="product-card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">5%
+                        class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">5%
                         <span class="visually-hidden"></span></span>
                     <img src="./images/pda_Hitman-3.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -320,9 +301,9 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product6 position-relative">
+                <div class="card position-relative">
                     <span
-                        class="product-card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">25%
+                        class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">25%
                         <span class="visually-hidden"></span></span>
                     <img src="./images/pda_PAYDAY-2.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -331,9 +312,9 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product7 position-relative">
+                <div class="card position-relative">
                     <span
-                        class="product-card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">50%
+                        class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">50%
                         <span class="visually-hidden"></span></span>
                     <img src="./images/pda_Counter-Strike-Global.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -342,9 +323,9 @@
                         <a href="#" class="btn btn-outline-success">Agregar al carrito</a>
                     </div>
                 </div>
-                <div class="product-card card product8 position-relative">
+                <div class="card position-relative">
                     <span
-                        class="product-card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">25%
+                        class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">25%
                         <span class="visually-hidden"></span></span>
                     <img src="./images/pda_Grand-Theft-Auto-V.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -360,8 +341,8 @@
             aria-labelledby="menuCartLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-header__title" id="menuCartLabel">Carrito de compras</h5>
-                <button type="button" class="offcanvas-header__btn-close btn-close text-reset" data-bs-dismiss="offcanvas"
-                    aria-label="Close"></button>
+                <button type="button" class="offcanvas-header__btn-close btn-close text-reset"
+                    data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
                 <h5 class="offcanvas-body__product">Producto</h5>
