--- a/html/contact.html
+++ b/html/contact.html
@@ -23,26 +23,26 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom -->
     <link rel="stylesheet" href="../css/stylescss.css">
-    <title>Nekzus Game Store - Contact Page</title>
     <!-- META DESCRIPTION -->
     <meta name="description"
         content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos.">
     <!-- META KEYWORDS -->
     <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO">
+    <title>Nekzus Game Store - Contact Page</title>
 </head>
 
 <body class="body">
     <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
-        <div class="logo">
-            <a href="../index.html" class="logo__link"><img class="logo__site"
+        <div class="header__logo">
+            <a href="../index.html" class="header__link"><img class="header__logo-site"
                     src="../images/logo-nekzus-game-store-shadow.png" alt="logo" /></a>
         </div>
-        <div class="title">
-            <a href="../index.html" class="title__link">
+        <div class="header__title">
+            <a href="../index.html" class="header__link">
                 <div class="animate__animated animate__rubberBand">
-                    <h1 class="title__site">
-                        Nekzus<span class="title__subtitle-site">Game Store</span>
+                    <h1 class="header__title-site">
+                        Nekzus<span class="header__subtitle-site">Game Store</span>
                     </h1>
                 </div>
             </a>
@@ -128,25 +128,6 @@
                 </form>
             </div>
         </section>
-        <!-- Animacion faces
-        <section class="animation">
-            <label class="face" data-aos="fade-right">
-                <input class="face__input-face" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-            <label class="face" data-aos="fade-right">
-                <input class="face__input-face" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-            <label class="face" data-aos="fade-left">
-                <input class="face__input-face" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-            <label class="face" data-aos="fade-left">
-                <input class="face__input-face" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-        </section> -->
         <!-- Multimedia: video y mapa -->
         <section class="video__container">
             <div class="video__subtitle">
@@ -157,25 +138,6 @@
                     allowfullscreen></iframe>
             </div>
         </section>
-        <!-- Animacion faces
-        <section class="animation">
-            <label class="face" data-aos="fade-right">
-                <input class="face__input-face" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-            <label class="face" data-aos="fade-right">
-                <input class="face__input-face" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-            <label class="face" data-aos="fade-left">
-                <input class="face__input-face" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-            <label class="face" data-aos="fade-left">
-                <input class="face__input-face" type="radio" name="pink" />
-                <div class="face__smile"></div>
-            </label>
-        </section> -->
         <section class="map__container">
             <div class="map__subtitle">
                 <h3 class="map__content-subtitle">Ubicación</h3>
