Modificacion background body

--- a/html/products.html
+++ b/html/products.html
@@ -25,9 +25,9 @@
     <link rel="stylesheet" href="../css/stylescss.css">
     <!-- META DESCRIPTION -->
     <meta name="description"
-        content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos.">
+        content="En esta página podrás filtrar y buscar los productos por categoria y precio.">
     <!-- META KEYWORDS -->
-    <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO">
+    <meta name="keywords" content="productos, precios, categorias, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo">
     <title>Nekzus Game Store - Products Page</title>
 </head>
 
