--- a/html/register.html
+++ b/html/register.html
@@ -25,9 +25,10 @@
     <link rel="stylesheet" href="../css/stylescss.css" />
     <!-- META DESCRIPTION -->
     <meta name="description"
-        content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos." />
+        content="En esta página vas a poder registrarte para poder operar con una cuenta habilitada. Desde aqui podras realizar tus compras e ingresar tus datos" />
     <!-- META KEYWORDS -->
-    <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO" />
+    <meta name="keywords"
+        content=" registro, pagina registro, registrarse, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo" />
     <title>Nekzus Game Store - Register Page</title>
 </head>
 
