--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="description"
         content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos." />
     <!-- META KEYWORDS -->
-    <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO" />
+    <meta name="keywords" content="store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo" />
     <title>Nekzus Game Store - Home Page</title>
 </head>
 
