--- a/html/contact.html
+++ b/html/contact.html
@@ -25,9 +25,9 @@
     <link rel="stylesheet" href="../css/stylescss.css">
     <!-- META DESCRIPTION -->
     <meta name="description"
-        content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos.">
+        content="Página de contacto con el mapa de nuestra ubicacion, en donde podras consultarnos por dudas o sugerencias.">
     <!-- META KEYWORDS -->
-    <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO">
+    <meta name="keywords" content="contacto, ubicación, encontranos, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo">
     <title>Nekzus Game Store - Contact Page</title>
 </head>
 
