--- a/html/login.html
+++ b/html/login.html
@@ -25,9 +25,9 @@
     <link rel="stylesheet" href="../css/stylescss.css">
     <!-- META DESCRIPTION -->
     <meta name="description"
-        content="Nekzus Game Store es una tienda de videojuegos en línea, donde podrás encontrar todo tipo de videojuegos, desde los más populares hasta los más nuevos.">
+        content="Inicia sesión para realizar tus compras y guardar tus productos favoritos">
     <!-- META KEYWORDS -->
-    <meta name="keywords" content="STORE, TIENDA, GAMER. VIDEOJUEGOS, JUEGOS, PC, PLAYSTATION, XBOX, NINTENDO">
+    <meta name="keywords" content="login, inicio sesión, ingreso usuario, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo">
     <title>Nekzus Game Store - Login Page</title>
 </head>
 
