Deploy firebase host

--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
     </div>
     <main class="main">
         <!-- Listado de productos destacados: listado horizontal -->
-        <section class="home__container">
-            <div class="home__subtitle">
-                <h3 class="home__content-subtitle">Productos destacados</h3>
+        <section class="featured__container">
+            <div class="featured__subtitle">
+                <h3 class="featured__content-subtitle">Productos destacados</h3>
             </div>
-            <div class="home__products">
+            <div class="featured__products">
                 <div class="card">
                     <img src="./images/pda_COD-Modern-Warfare.webp" class="card-img-top" alt="producto" />
                     <div class="card-body">
@@ -241,11 +241,11 @@
             </div>
         </section>
         <!-- Listado de productos en oferta: listado horizontal -->
-        <section class="home__container">
-            <div class="home__subtitle">
-                <h3 class="home__content-subtitle">Ofertas disponibles</h3>
+        <section class="offers__container">
+            <div class="offers__subtitle">
+                <h3 class="offers__content-subtitle">Ofertas disponibles</h3>
             </div>
-            <div class="home__products">
+            <div class="offers__products">
                 <div class="card position-relative">
                     <span
                         class="card--badge-off position-absolute top-1 right-1 start-90 translate-middle badge rounded-pill">25%
