--- a/html/contact.html
+++ b/html/contact.html
@@ -27,7 +27,8 @@
     <meta name="description"
         content="Página de contacto con el mapa de nuestra ubicacion, en donde podras consultarnos por dudas o sugerencias.">
     <!-- META KEYWORDS -->
-    <meta name="keywords" content="contacto, ubicación, encontranos, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo">
+    <meta name="keywords"
+        content="contacto, ubicación, encontranos, store, tienda, gamer, videojuegos, juegos, pc, playstation, xbox, nintendo">
     <title>Nekzus Game Store - Contact Page</title>
 </head>
 
@@ -99,32 +100,32 @@
             <div class="form__subtitle">
                 <h3 class="form__content-subtitle">Contactanos</h3>
             </div>
-            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in"
-                data-aos-delay="200" data-aos-duration="2000">
+            <div
+                class="form__form-group  form__form-group--center-items-grid form__form-group--fade-in-up form__form-group--animated">
                 <h3 class="form__title">Completa el formulario de contacto</h3>
                 <form class="form__formu">
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="name" class="form__label form-label">Nombre</label>
                         <input type="text" class="form__control form-control" id="name" placeholder="Nombre de usuario"
                             required>
                     </div>
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="e-mail" class="form__label form-label">E-mail</label>
                         <input type="email" class="form__control form-control" id="e-mail" placeholder="E-mail"
                             required>
                     </div>
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="telephone" class="form__label form-label">Teléfono</label>
                         <input type="tel" class="form__control form-control" id="telephone"
                             placeholder="Telefono (opcional)">
                     </div>
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="message" class="form__label form-label">Mensaje</label>
                         <textarea class="form__text-area form__control form-control" id="message"
                             placeholder="Mensaje (opcional)" rows="10"></textarea>
                     </div>
-                    <button type="button" class="form__button-submit btn btn-outline-success" data-aos="fade-up"
-                        data-aos-delay="1000" data-aos-duration="1000">Enviar</button>
+                    <button type="button"
+                        class="form__button-submit btn btn-outline-success form__button-submit--fade-in-up form__button-submit--animated">Enviar</button>
                 </form>
             </div>
         </section>
