--- a/html/login.html
+++ b/html/login.html
@@ -99,22 +99,20 @@
             <div class="form__subtitle">
                 <h3 class="form__content-subtitle">Inicia sesión</h3>
             </div>
-            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in"
-                data-aos-delay="200" data-aos-duration="2000">
+            <div class="form__form-group  form__form-group--center-items-grid form__form-group--fade-in-up form__form-group--animated">
                 <h3 class="form__title">Introduce los datos de tu cuenta</h3>
                 <form class="form__formu">
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="e-mail" class="form__label form-label">E-mail usuario</label>
                         <input type="email" class="form__control form-control" id="e-mail"
                             placeholder="Correo electronico">
                     </div>
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="password-1" class="form__label form-label">Password</label>
                         <input type="password" class="form__control form-control" id="password-1"
                             placeholder="Contraseña">
                     </div>
-                    <button type="submit" class="form__button-submit btn btn-outline-success" data-aos="fade-up"
-                        data-aos-delay="600" data-aos-duration="1000">Iniciar sesión</button>
+                    <button type="submit" class="form__button-submit btn btn-outline-success form__button-submit--fade-in-up form__button-submit--animated">Iniciar sesión</button>
                     <p class="form__text">¿No tienes cuenta?<a class="form__link" href="./register.html"> Registrate</a>
                     </p>
                 </form>
