--- a/html/register.html
+++ b/html/register.html
@@ -102,32 +102,30 @@
             <div class="form__subtitle">
                 <h3 class="form__content-subtitle">Registrate</h3>
             </div>
-            <div class="form__form-group  form__form-group--center-items-grid" data-aos="fade-zoom-in"
-                data-aos-delay="200" data-aos-duration="2000">
+            <div class="form__form-group  form__form-group--center-items-grid form__form-group--fade-in-up form__form-group--animated">
                 <h3 class="form__title">Completa todos los campos</h3>
                 <form class="form__formu">
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="name" class="form__label form-label">Nombre</label>
                         <input type="text" class="form__control form-control" id="name" placeholder="Nombre de usuario"
                             required />
                     </div>
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="e-mail" class="form__label form-label">E-mail</label>
                         <input type="email" class="form__control form-control" id="e-mail" placeholder="E-mail"
                             required />
                     </div>
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="password-1" class="form__label form-label">Contraseña</label>
                         <input type="password" class="form__control form-control" id="password-1"
                             placeholder="Contraseña" required />
                     </div>
-                    <div class="mb-3 form__camp" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
+                    <div class="mb-3 form__camp form__camp--fade-in-up form__camp--animated">
                         <label for="password-2" class="form__label form-label">Confirmar contraseña</label>
                         <input type="password" class="form__control form-control" id="password-2"
                             placeholder="Confirmar contraseña" required />
                     </div>
-                    <button type="submit" class="form__button-submit btn btn-outline-success" data-aos="fade-up"
-                        data-aos-delay="1000" data-aos-duration="1000">
+                    <button type="submit" class="form__button-submit btn btn-outline-success form__button-submit--fade-in-up form__button-submit--animated">
                         Registrarse
                     </button>
                     <p class="form__text">
