3er entrega proyecto

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">FORZA HORIZON 5</h5>
                         <p class="carousel__text">
-                            Some representative placeholder content for the first slide.
+                            Forza Horizon 5 es un videojuego de carreras de próxima aparición desarrollado por Playground Games y publicado por Xbox Game Studios.
                         </p>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">BORDERLANDS 2</h5>
                         <p class="carousel__text">
-                            Some representative placeholder content for the second slide.
+                            Borderlands 2 es un videojuego de disparos en primera persona con elementos de rol, se trata de la secuela del videojuego de 2009, Borderlands.
                         </p>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">RED DEAD REDEMPTION 2</h5>
                         <p class="carousel__text">
-                            Some representative placeholder content for the third slide.
+                            Red Dead Redemption 2, estilizado Red Dead Redemption II, es un videojuego de acción-aventura western, en un mundo abierto y en perspectiva de primera y tercera persona, con componentes para un jugador y multijugador.
                         </p>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">THE WITCHER 3</h5>
                         <p class="carousel__text">
-                            Some representative placeholder content for the third slide.
+                            The Witcher 3: Wild Hunt es un videojuego de rol desarrollado y publicado por la compañía polaca CD Projekt RED. Esta compañía es la desarrolladora mientras que la distribución corre a cargo de la Warner Bros.
                         </p>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                     <div class="carousel__caption carousel-caption d-none d-md-block">
                         <h5 class="carousel__title">COD MODERN WARFARE</h5>
                         <p class="carousel__text">
-                            Some representative placeholder content for the third slide.
+                            Modern Warfare es un videojuego de disparos en primera persona desarrollado por Infinity Ward y publicado por Activision. Es el decimosexto juego de la saga Call of Duty y es un reinicio de la serie Modern Warfare.
                         </p>
                     </div>
                 </div>
