Modificacion animacion scroll AOS

--- a/html/login.html
+++ b/html/login.html
@@ -140,7 +140,7 @@
     <footer class="footer">
         <div class="pre-footer">
             <!-- Sobre nosotros -->
-            <section class="section-about" data-aos="zoom-in">
+            <section class="section-about" data-aos="zoom-in" data-aos-once="true">
                 <h3 class="section-about__title-about">Sobre Nekzus Game Store</h3>
                 <p class="section-about__desc-about">
                     Nekzus Game Store es una tienda de videojuegos en línea, donde
@@ -150,7 +150,7 @@
             </section>
             <!-- Redes sociales, newsletter y contacto -->
             <section class="section-follow">
-                <div class="newsletter" data-aos="zoom-in">
+                <div class="newsletter" data-aos="zoom-in" data-aos-once="true">
                     <h3 class="newsletter__title">Suscribete</h3>
                     <form class="form" action="#">
                         <input class="form__email form-control" type="email" name="email" id="email"
@@ -158,7 +158,7 @@
                         <button class="form__button form__button--btn-news btn btn-outline-success">Enviar</button>
                     </form>
                 </div>
-                <div class="socials" data-aos="zoom-in">
+                <div class="socials" data-aos="zoom-in" data-aos-once="true">
                     <h3 class="socials__title">Síguenos en:</h3>
                     <a class="socials__link socials__link--youtube" href="https://www.youtube.com/" title="YouTube"
                         target="_blank"><i id="youtube" class="bi bi-youtube"></i></a>
@@ -167,7 +167,7 @@
                     <a class="socials__link socials__link--instagram" href="https://www.instagram.com/"
                         title="Instagram" target="_blank"><i id="instagram" class="bi bi-instagram"></i></a>
                 </div>
-                <div class="contact" data-aos="zoom-in">
+                <div class="contact" data-aos="zoom-in" data-aos-once="true">
                     <h3 class="contact__title">Contacto</h3>
                     <p class="contact__text">Nekzus Game Store</p>
                     <p class="contact__text">Avenida Siempreviva, 742</p>
