Se crea tema claro con preferencia usuario

--- a/html/contact.html
+++ b/html/contact.html
@@ -32,7 +32,7 @@
     <title>Nekzus Game Store - Contact Page</title>
 </head>
 
-<body class="body">
+<body class="body body--dark">
     <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
         <div class="header__logo">
