--- a/html/products.html
+++ b/html/products.html
@@ -31,7 +31,7 @@
     <title>Nekzus Game Store - Products Page</title>
 </head>
 
-<body class="body">
+<body class="body body--dark">
     <header class="header">
         <!-- Logo y titulo con link a la pagina de inicio -->
         <div class="header__logo">
